intermediate revision - fixed typo in "commandTemplate" , removed unused methods, fixed issue with conflicting JDK, updated  README